# stock-reasearch-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  prd_sec_handle.md  preprocess_sec.py  pyproject.toml  run.sh  run_pipeline.py  single_agent.py  test_extract_sec_sections.py
files/COIN/: _index.json
files/CRCL/: _index.json
files/CRCL/notes/: deep-business_20251127_225146.md  investment_memo.md  investment_memo_challenge.md
files/CRCL_v0/: _index.json
files/CRCL_v0/notes/: investment_memo.md
files/MELI/: _index.json
files/MELI/notes/: investment_memo.md  investment_memo_challenge.md
files/NVDA/: _index.json
files/TSLA/: report.md
files/past/: view_7powers_pass.md  view_7powers_summary.md  view_7powers_v0.md
prompts/: business_researcher.txt  challenge_agent.txt  deep_business_researcher.txt  deep_culture_researcher.txt  deep_financial_researcher.md  deep_history_researcher.txt  deep_industrial_researcher.txt  history_researcher.txt  lead_agent.txt  org_researcher.txt  report_writer.txt  summary_agent.txt
prompts/old/: business_researcher.txt  deep_business_researcher_old.txt  history_researcher.txt  history_researcher_v1.txt  观点_7powers_v0.md  观点_7powers_v1.md
prompts/profile/: deep_business_researcher.txt  deep_history_researcher_v0.txt  deep_industrial_researcher_v1.txt  deep_organizational_structure.md  org_researcher.txt  知识库_企业文化.md  知识库_公司历史.md  知识库_商业模式.md  知识库_赛道分析.md
prompts/view/: 观点_7powers.md  观点_创生公式.md  观点_思维颠覆者.md  观点_生态猎手.md  观点_秩序.md
tools/: sec_agent_tool.py  sec_parser.py  sec_tools.py
(+191 files in other folders)
